Remove count_total from pagination
