# api/docs/swagger.json
@@ -67,12 +67,6 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
                         "description": "Reverse order, default is true. if set to true, the results will be ordered in descending order",
                         "name": "pagination.reverse",
                         "in": "query"
@@ -140,12 +134,6 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
                         "description": "Reverse order default is true if set to true, the results will be ordered in descending order",
                         "name": "pagination.reverse",
                         "in": "query"
@@ -202,12 +190,6 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
                         "description": "Reverse order default is true if set to true, the results will be ordered in descending order",
                         "name": "pagination.reverse",
                         "in": "query"
@@ -260,12 +242,6 @@
                         "type": "integer",
                         "description": "Pagination limit, default is 100",
                         "name": "pagination.limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
                         "in": "query"
                     },
                     {
@@ -370,12 +346,6 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
                         "description": "Reverse order default is true if set to true, the results will be ordered in descending order",
                         "name": "pagination.reverse",
                         "in": "query"
@@ -434,12 +404,6 @@
                         "type": "integer",
                         "description": "Pagination limit, default is 100",
                         "name": "pagination.limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
                         "in": "query"
                     },
                     {
@@ -507,12 +471,6 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
                         "description": "Reverse order default is true if set to true, the results will be ordered in descending order",
                         "name": "pagination.reverse",
                         "in": "query"
@@ -551,12 +509,6 @@
                         "type": "integer",
                         "description": "Pagination limit, default is 100",
                         "name": "pagination.limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
                         "in": "query"
                     },
                     {
@@ -606,12 +558,6 @@
                         "type": "integer",
                         "description": "Pagination limit, default is 100",
                         "name": "pagination.limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
                         "in": "query"
                     },
                     {
@@ -667,12 +613,6 @@
                         "type": "integer",
                         "description": "Pagination limit, default is 100",
                         "name": "pagination.limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
                         "in": "query"
                     },
                     {
@@ -744,12 +684,6 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
                         "description": "Reverse order default is true if set to true, the results will be ordered in descending order",
                         "name": "pagination.reverse",
                         "in": "query"
@@ -806,12 +740,6 @@
                         "type": "integer",
                         "description": "Pagination limit, default is 100",
                         "name": "pagination.limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
                         "in": "query"
                     },
                     {
@@ -878,12 +806,6 @@
                         "type": "integer",
                         "description": "Pagination limit, default is 100",
                         "name": "pagination.limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Count total, default is true",
-                        "name": "pagination.count_total",
                         "in": "query"
                     },
                     {
