# api/handler/block/block.go
@@ -19,7 +19,6 @@ import (
 // @Param pagination.key query string false "Pagination key"
 // @Param pagination.offset query int false "Pagination offset"
 // @Param pagination.limit query int false "Pagination limit, default is 100"
-// @Param pagination.count_total query bool false "Count total, default is true"
 // @Param pagination.reverse query bool false "Reverse order, default is true. if set to true, the results will be ordered in descending order"
 // @Router /indexer/block/v1/blocks [get]
 func (h *BlockHandler) GetBlocks(c *fiber.Ctx) error {
